--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,26 @@
 body {
   margin: 0;
 }
+
+.global-nav {
+  background-color: grey;
+  padding: 1rem;
+}
+
+.global-nav ul {
+  display: flex;
+  justify-content: space-between;
+}
+
+.global-nav li {
+  list-style: none;
+}
+
+.global-nav a {
+  font-size: 2rem;
+  color: black;
+}
+
+.global-nav a:hover {
+  color: red;
+}
